--- a/css/estilo.css
+++ b/css/estilo.css
@@ -100,3 +100,8 @@ a:active {
 	display: block;
 	margin-top: 10px;
 }
+/*@media only screen and (max-width: 400px) and (orientation: landscape){
+	body{
+		background-color: aqua;
+	}
+}*/
